# tari-stable-coin

./: Cargo.toml
applications/cli/: Cargo.toml
applications/cli/src/: cli.rs  main.rs
applications/issuer_service/: Cargo.toml
applications/issuer_service/src/: cli.rs  main.rs  server.rs
applications/issuer_service/src/handlers/: auth.rs  context.rs  issuer.rs  mod.rs  settings.rs
issuer-cli/: Cargo.toml
issuer-cli/src/: cli.rs  main.rs
issuer_client/: Cargo.toml
issuer_client/src/: client.rs  error.rs  lib.rs  types.rs
stable-coin-cli/: Cargo.toml  token.data
stable-coin-cli/src/: cli.rs  daemon_client.rs  main.rs
store/: Cargo.toml  __build.rs  prepare.sh
store/.sqlx/: query-aa5c967ed85159ef26a1d40148853ce7c1232e0659ee42cdb0149ff42014d922.json
store/migrations/: 20240206085612_initial.sql
store/src/: error.rs  lib.rs  serialization.rs  store.rs
store/src/models/: mod.rs  settings.rs
tari-stable-coin-client/: Cargo.toml
tari-stable-coin-client/src/: cli.rs
templates/stable-coin/: Cargo.toml
user-account-cli/: Cargo.toml
user-account-cli/src/: cli.rs  main.rs
