[workspace]
members = [
    "applications/cli",
    "applications/issuer_service",
    "issuer_client",
    "store",
]
exclude = [
    "tari-stable-coin-client"
]
resolver = "2"

[workspace.dependencies]
tari_template_lib = "0.3.0"
tari_engine_types = "0.1.0"
tari_indexer_client = "0.1.0"

stable_coin_store = { path = "./store" }
stable_coin_issuer_client = { path = "./issuer_client", default-features = false }

async-trait = "0.1.77"
anyhow = "1.0.79"
axum = "0.7.4"
axum-extra = "0.9.2"
axum-jrpc = "0.6.1"
ctrlc = "3.4.2"
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.17"
fern = "0.6.2"
humantime = "2.1.0"
jsonwebtoken = "9.2.0"
hex = "0.4.3"
url = { version = "2.5.0", features = [] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["rt", "macros"] }
log = "0.4.20"
reqwest = "0.11.24"
serde = "1.0.192"
serde_json = "1.0.113"
tower-http = { version = "0.5.1", default-features = false }
thiserror = "1.0.56"

[patch.crates-io]
tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_engine_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_indexer_client = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
