[package]
name = "issuer_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tari_indexer_client = { workspace = true }

stable_coin_store = { workspace = true }
stable_coin_issuer_client = { workspace = true, default-features = false }

async-trait = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-jrpc = { workspace = true, features = ["anyhow_error"] }
fern = { workspace = true }
humantime = { workspace = true }
ctrlc = { workspace = true }
clap = { workspace = true, features = ["derive"] }
url = { workspace = true, features = [] }
jsonwebtoken = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower-http = { workspace = true, default-features = false, features = ["cors"] }
thiserror = { workspace = true }